fix layout on safari

--- a/src/layout.css
+++ b/src/layout.css
@@ -83,7 +83,6 @@ body {
 	flex-grow: 1;
 	flex-shrink: 1;
 	flex-basis: 0;
-	min-height: 0;
 }
 .justify-between {
 	justify-content: space-between;
@@ -192,12 +191,11 @@ scroll-outer {
 	height: 100%;
 }
 scroll-middle {
-/*	display: flex;
+	display: flex;
 	flex-direction: column;
-	
-	min-height: 100%;
-	justify-content: flex-end;*/
 	overflow: hidden;
+	min-height: 100%;
+	justify-content: flex-end;
 }
 scroll-inner {
 	display: block;
@@ -395,6 +393,11 @@ sidebar-panel
 /* this element isn't sized based on contents */
 .resize-box > .grow {
 	contain: strict;
+}
+
+/* safari JUST broke this oh my god */
+scroll-outer {
+	contain: content !important;
 }
 
 /* their scrolling contents */
